[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CircleEnemy.tscn" type="PackedScene" id=2]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )
triangle_enemy = ExtResource( 2 )

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
